--- a/Home.html
+++ b/Home.html
@@ -60,7 +60,7 @@
               Rezepte
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="Kategorien/Nach_Art.html">Nach Art</a>
+              <a class="dropdown-item" href="Kategorien/Nach_Art.html">Nach Zubereitungsart</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="+suche.html">Nach Zutaten</a>
               <div class="dropdown-divider"></div>
@@ -108,20 +108,19 @@
       <div class="carousel-item">
         <div class="slideshow-wrapper">
           <div class="gradient">
-            <img class="first-slide" src="img/FrontPage/Plov2.jpg" alt="First slide">
+            <img class="first-slide" src="img/FrontPage/ScallionPancake2.jpg" alt="First slide">
           </div>
         </div>
         <div class="container">
           <div class="carousel-caption text-left">
-            <div class=abstand>
+            <div class=a bstand>
               <h2>
-                <span>Example headline.</span>
+                <span>葱油饼</span>
               </h2>
               <p>
-                <span>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
-                  Nullam id dolor id nibh ultricies vehicula ut id elit.</span>
+                <span>In China werden Pfannkuchen meisstens salzig mit oder ohne Füllung als Beilage gegessen. Ich zeige euch wie der Klassiker gefüllt mit Frühlingswiebeln gemacht wird.</span>
               </p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a>
+              <a class="btn btn-lg btn-primary" href="#" role="button">Zum Rezept</a>
             </div>
           </div>
         </div>
@@ -129,18 +128,17 @@
       <div class="carousel-item active">
         <div class="slideshow-wrapper">
           <div class="gradient">
-            <img class="first-slide" src="img/FrontPage/GrilledPineapple2.jpg" alt="Second slide">
+            <img class="first-slide" src="img/FrontPage/Plov2.jpg" alt="Second slide">
           </div>
         </div>
         <div class="container">
           <div class="carousel-caption">
-            <div class=abstand>
+            <div class=a bstand>
               <h2>
-                <span>Another example headline.</span>
+                <span>узбекский плов</span>
               </h2>
               <p>
-                <span>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
-                  Nullam id dolor id nibh ultricies vehicula ut id elit.</span>
+                <span>[ʊzbʲˈekskʲɪj plˈof].</span>
               </p>
               <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
             </div>
@@ -155,9 +153,9 @@
         </div>
         <div class="container">
           <div class="carousel-caption text-right">
-            <div class=abstand>
+            <div class=a bstand>
               <h2>
-                <span>One more for good measure.</span>
+                <span>Spaghetti alla puttanesca</span>
               </h2>
               <p>
                 <span>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
@@ -185,7 +183,7 @@
   <div class="container marketing">
 
     <!-- START THE FEATURETTES -->
-    <h1 style="text-align:center">Willkommen bei VILKA</h1>
+    <h1 style="text-align:center">Willkommen bei Vilka</h1>
     <hr class="featurette-divider">
     <div class="row featurette">
       <div class="col-md-7">
@@ -195,7 +193,7 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
           cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         <p>
-          <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+          <a class="btn btn-secondary" href="#" role="button">Zum Rezept &raquo;</a>
         </p>
       </div>
       <div class="col-md-5">
@@ -208,16 +206,15 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Morgens Müde?
-          <span class="text-muted"> Hier sind 4 Rezepte um dich Wach zu rütteln.</span>
+          <span class="text-muted">Maori Bread geht super schnell und passt perfekt zu Tee oder Kaffe.</span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
-          cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead"> Fritterter Teig ist in vielen Ländern Beliebt, zwar nicht gesund aber meiner Meinung nach, eines der besten Teegebäcke überhaupt.</p>
         <p>
-          <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+          <a class="btn btn-secondary" href="#" role="button">Zum Rezept &raquo;</a>
         </p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img class="featurette-image img-fluid mx-auto" src="img/Rezepte/3.gif" alt="Generic placeholder image">
+        <img class="featurette-image img-fluid mx-auto" src="img/FrontPage/Baursak.jpg" alt="Maori Bread">
       </div>
     </div>
 
@@ -226,13 +223,10 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Abkühlung gefällig?
-          <span class="text-muted"> 5 neue Cocktails um deine Freunde zu beeindrucken.</span>
+          <span class="text-muted"> Bald gibts neue Getränke und Desserts für den Frühling.</span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
-          cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        <p>
-          <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-        </p>
+        <p class="lead">Drinks & Desserts ist noch in bearbeitung, ihr könnt euch aber auf Erfrischende Rezepte freuen sobald ich die Zeit dazu gefunden habe. </p>
+       
       </div>
       <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto" src="img/Rezepte/2.gif" alt="Generic placeholder image">
@@ -242,48 +236,17 @@
     <hr class="featurette-divider">
     <!-- /END THE FEATURETTES -->
 
-    <h1 style="text-align:center">VILKA</h2>
+    <h1 style="text-align:center">About Vilka</h2>
 
       <hr class="featurette-divider">
 
       <p>Vilka oder вилка (kyrillisch) bedeutet auf Russisch Gabel. Als Rezepteseite mit Erweiterter Suche hat Vilka das Ziel
-        einem bei der Entscheidung zu helfen: «Was koche ich heute?».
+        mir bei der Entscheidung zu helfen: «Was koche ich heute?». Ich interessiere mich für Essen aus aller Welt und habe mir mittlerweile über 120 Rezepte angesammelt. Diese aber wurden in meinem Kopf oder meiner riesigen Youtube Playlist gespeichert - viel zu unübersichtlich. Es musste bessere Lösung her, eine bei der man z.B. nach Zutaten suchen kann, die man noch Zuhause hat. Aus diesem Grund habe ich Vilka ins Leben gerufen, primär um mir und eventuell auch euch den Alltag ein kleines bisschen unkoplizierter zu machen.
       </p>
 <br><br> <br>
 
-      <div class="row">
 
-        <div class="col-lg-4">
-          <img class="rounded-circle" src="img/Rezepte/dessert.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula
-            ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        </div>
-        <!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="rounded-circle" src="img/Rezepte/3.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur
-            purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 
-        </div>
-        <!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="rounded-circle" src="img/Rezepte/1.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis
-            euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-            sit amet risus.</p>
-        </div>
-        <!-- /.col-lg-4 -->
-      </div>
-      <!-- /.row -->
-
-      <hr class="featurette-divider">
-
-      <h1 style="text-align:center">Über Mich</h2>
-
-        <hr class="featurette-divider">
 
 
 
@@ -303,35 +266,6 @@
       <div class="container-fluid text-center text-md-left">
         <div class="row">
 
-          <!--First column-->
-          <div class="col-md-6">
-            <ul>
-              <li>
-                <a href="#">
-                  <i class="fas fa-envelope"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-google-plus-g"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-instagram"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-facebook"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-paypal"></i>
-                </a>
-              </li>
-            </ul>
 
             <div class="arrow">
               <a href="#">
