--- a/Home.html
+++ b/Home.html
@@ -120,7 +120,7 @@
               <p>
                 <span>In China werden Pfannkuchen meisstens salzig mit oder ohne Füllung als Beilage gegessen. Ich zeige euch wie der Klassiker gefüllt mit Frühlingswiebeln gemacht wird.</span>
               </p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Zum Rezept</a>
+              <a class="btn btn-lg btn-primary" href="http://vilka.ch/RezeptDetailAdv.php?id=11" role="button">Zum Rezept</a>
             </div>
           </div>
         </div>
@@ -138,9 +138,9 @@
                 <span>узбекский плов</span>
               </h2>
               <p>
-                <span>[ʊzbʲˈekskʲɪj plˈof].</span>
+                <span>[ʊzbʲˈekskʲɪj plˈof] - Plov wird in ganz Zentral Asien gegessen, die ursprüngliche Bezeichnung stammt wahrscheinlich aus Iran (persisch پلو / polow, auch pollo) - "Reis".  </span>
               </p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
+              <a class="btn btn-lg btn-primary" href="#" role="button">Zum Rezept</a>
             </div>
           </div>
         </div>
@@ -158,10 +158,9 @@
                 <span>Spaghetti alla puttanesca</span>
               </h2>
               <p>
-                <span>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
-                  Nullam id dolor id nibh ultricies vehicula ut id elit.</span>
+                <span>Der Ursprung des Namens ist ungeklärt. Eine der Erklärungen soll er darauf zurückgehen, dass Prostituierte das Gericht schnell und einfach zwischen Besuchen ihrer Freier zubereiten konnten.</span>
               </p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a>
+              <a class="btn btn-lg btn-primary" href="http://vilka.ch/RezeptDetailAdv.php?id=14" role="button">Zum Rezept</a>
             </div>
           </div>
         </div>
