--- a/Kategorien/Kategorien.html
+++ b/Kategorien/Kategorien.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/Kategorien.css">
+    <link rel="stylesheet" href="css/Kategorien.css">
 
     <title>VILKA</title>
 </head>
@@ -25,38 +25,39 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="../Home.html">
+            <a class="navbar-brand" href="Home.html">
                 <div class="imgcontainer">
-                    <img class="main" src="../img/fork1.png" height="35" alt="VILKA">
-                    <img class="glow" src="../img/fork1.png" height="35">
+                    <img class="main" src="img/fork1.png" height="35" alt="VILKA">
+                    <img class="glow" src="img/fork1.png" height="35">
                 </div>
             </a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../Home.html">Home</a>
+                        <a class="nav-link" href="Home.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="../Kategorien.html" id="navbarDropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown">
                             Rezepte
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../Kategorien/Nach_Art.html">Nach Zubereitungsartt</a>
+                            <a class="dropdown-item" href="Kategorien/Nach_Art.html">Nach Art</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Nach Zutaten</a>
+                            <a class="dropdown-item" href="+suche.html">Nach Zutaten</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../Kategorien/Aus_aller_Welt.html">Aus aller Welt</a>
+                            <a class="dropdown-item" href="Kategorien/Aus_aller_Welt.html">Aus aller Welt</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../Kategorien/Für_besondere_Anlässe.html">Für besondere Anlässe</a>
+                            <a class="dropdown-item" href="Kategorien/Für_besondere_Anlässe.html">Für besondere Anlässe</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../Kategorien/Ernährung_&_Allergien.html">Ernährung & Allergien</a>
+                            <a class="dropdown-item" href="Kategorien/Ernährung_&_Allergien.html">Ernährung & Allergien</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../Kategorien/Drinks_&_Desserts.html">Drinks & Desserts</a>
+                            <a class="dropdown-item" href="Kategorien/Drinks_&_Desserts.html">Drinks & Desserts</a>
                         </div>
                         <span class="sr-only">(current)</span>
                     </li>
+                    
                     <li class="nav-item">
                         <div class="container2">
                             <div class="search-box">
@@ -78,30 +79,27 @@
 
             <nav aria-label="breadcrumb-dark">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                        <a href="../Kategorien.html">Rezepte</a>
-                    </li>
-                    <li class="breadcrumb-item active" aria-current="page">Nach Zutaten</li>
+                    <li class="breadcrumb-item active" aria-current="page">Rezepte</li>
                 </ol>
             </nav>
 
 
             <div class="row">
                 <div class="column">
-                    <a href="../temp2.html">
-                        <img src="../img\Rezepte\gerichtsart.jpg">
+                    <a href="Kategorien/Nach_Art.html">
+                        <img src="img\Rezepte\gerichtsart.jpg">
                         <figcaption>Nach Art</figcaption>
                     </a>
                 </div>
                 <div class="column">
-                    <a href="../temp2.html">
-                        <img src="../img\Rezepte\zutat.jpg">
+                    <a href="+suche.html">
+                        <img src="img\Rezepte\zutat.jpg">
                         <figcaption>Nach Zutaten</figcaption>
                     </a>
                 </div>
                 <div class="column">
-                    <a href="../temp2.html">
-                        <img src="../img\Rezepte\welt.jpg">
+                    <a href="Kategorien/Aus_aller_Welt.html">
+                        <img src="img\Rezepte\welt.jpg">
                         <figcaption>Aus aller Welt</figcaption>
                     </a>
                 </div>
@@ -109,25 +107,28 @@
 
             <div class="row">
                 <div class="column">
-                    <a href="../temp2.html">
-                        <img src="../img\Rezepte\festessen.jpg">
+                    <a href="Kategorien/Für_besondere_Anlässe.html">
+                        <img src="img\Rezepte\festessen.jpg">
                         <figcaption>Für besondere Anlässe</figcaption>
                     </a>
                 </div>
                 <div class="column">
-                    <a href="../temp2.html">
-                        <img src="../img\Rezepte\allergien.jpg">
+                    <a href="Kategorien/Ernährung_&_Allergien.html">
+                        <img src="img\Rezepte\allergien.jpg">
                         <figcaption>Ernährung & Allergie</figcaption>
                     </a>
                 </div>
                 <div class="column">
-                    <a href="../temp2.html">
-                        <img src="../img\Rezepte\dessert.jpg">
+                    <a href="Kategorien/Drinks_&_Desserts.html">
+                        <img src="img\Rezepte\dessert.jpg">
                         <figcaption>Drinks & Desserts</figcaption>
                     </a>
                 </div>
 
             </div>
+
+            <button href="#" type="button2" class="btn btn-sm btn-outline-light">Alle Anzeigen</button>
+
         </div>
 
 
@@ -188,6 +189,7 @@
         </footer>
         <!--/.Footer-->
 
+    
 </body>
 
 </html>
