--- a/Kategorien/Für_besondere_Anlässe.html
+++ b/Kategorien/Für_besondere_Anlässe.html
@@ -38,7 +38,7 @@
                     </a>
                    
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../Kategorien/Nach_Art.html">Nach Art</a>
+                            <a class="dropdown-item" href="../Kategorien/Nach_Art.html">Nach Zubereitungsart</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="../+suche.html">Nach Zutaten</a>
                         <div class="dropdown-divider"></div>
