--- a/Kategorien/Nach_Art.html
+++ b/Kategorien/Nach_Art.html
@@ -43,7 +43,7 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Nach Art</a>
+                            <a class="dropdown-item" href="#">Nach Zubereitungsart</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="../+suche.html">Nach Zutaten</a>
                             <div class="dropdown-divider"></div>
