--- a/Home.html
+++ b/Home.html
@@ -120,7 +120,7 @@
               <p>
                 <span>In China werden Pfannkuchen meisstens salzig mit oder ohne Füllung als Beilage gegessen. Ich zeige euch wie der Klassiker gefüllt mit Frühlingswiebeln gemacht wird.</span>
               </p>
-              <a class="btn btn-lg btn-primary" href="http://vilka.ch/RezeptDetailAdv.php?id=11" role="button">Zum Rezept</a>
+              <a class="btn btn-outline-light" href="http://vilka.ch/RezeptDetailAdv.php?id=11" role="button">Zum Rezept</a>
             </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
               <p>
                 <span>[ʊzbʲˈekskʲɪj plˈof] - Plov wird in ganz Zentral Asien gegessen, die ursprüngliche Bezeichnung stammt wahrscheinlich aus Iran (persisch پلو / polow, auch pollo) - "Reis".  </span>
               </p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Zum Rezept</a>
+              <a class="btn btn-outline-light" href="#" role="button">Zum Rezept</a>
             </div>
           </div>
         </div>
@@ -160,7 +160,7 @@
               <p>
                 <span>Der Ursprung des Namens ist ungeklärt. Eine der Erklärungen soll er darauf zurückgehen, dass Prostituierte das Gericht schnell und einfach zwischen Besuchen ihrer Freier zubereiten konnten.</span>
               </p>
-              <a class="btn btn-lg btn-primary" href="http://vilka.ch/RezeptDetailAdv.php?id=14" role="button">Zum Rezept</a>
+              <a class="btn btn-outline-light" href="http://vilka.ch/RezeptDetailAdv.php?id=14" role="button">Zum Rezept</a>
             </div>
           </div>
         </div>
@@ -186,11 +186,10 @@
     <hr class="featurette-divider">
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">10 neue Rezepte für den Sommer.
-          <span class="text-muted">Zeig Ihnen wer der Grillmeister ist!</span>
+        <h2 class="featurette-heading">Chicken Karaage
+          <span class="text-muted">Mit Asiatischem Coleslaw</span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
-          cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead"></p>
         <p>
           <a class="btn btn-secondary" href="#" role="button">Zum Rezept &raquo;</a>
         </p>
@@ -238,16 +237,16 @@
     <h1 style="text-align:center">About Vilka</h2>
 
       <hr class="featurette-divider">
-
-      <p>Vilka oder вилка (kyrillisch) bedeutet auf Russisch Gabel. Als Rezepteseite mit Erweiterter Suche hat Vilka das Ziel
-        mir bei der Entscheidung zu helfen: «Was koche ich heute?». Ich interessiere mich für Essen aus aller Welt und habe mir mittlerweile über 120 Rezepte angesammelt. Diese aber wurden in meinem Kopf oder meiner riesigen Youtube Playlist gespeichert - viel zu unübersichtlich. Es musste bessere Lösung her, eine bei der man z.B. nach Zutaten suchen kann, die man noch Zuhause hat. Aus diesem Grund habe ich Vilka ins Leben gerufen, primär um mir und eventuell auch euch den Alltag ein kleines bisschen unkoplizierter zu machen.
-      </p>
-<br><br> <br>
-
-
-
-
-
+      <div>
+        <p style="float: left;"><img src="http://placekitten.com/g/200/200" height="200px" width="200px" margin"20%"></p>
+        <p>Vilka oder вилка (kyrillisch) bedeutet auf Russisch Gabel. Als Rezepteseite mit Erweiterter Suche hat Vilka das Ziel
+          mir bei der Entscheidung zu helfen: «Was koche ich heute?». Ich interessiere mich für Essen aus aller Welt und habe mir mittlerweile sicher schon über 150 Rezepte angesammelt.
+           Diese sind aber in meinem Kopf oder meiner riesigen Youtube Playlist gespeichert - viel zu unübersichtlich.
+            Es musste eine bessere Lösung her, eine bei der man z.B. nach Zutaten suchen kann, die man noch Zuhause hat.
+            Ebenfalls kenne ich viele Leute die Aufgrund ihrer Diät oder Allergie auf gewisse Zutaten verzichten müssen.
+             Aus diesem Grund habe ich Vilka ins Leben gerufen, um mir und euch den Alltag ein kleines bisschen unkomplizierter zu machen.</p>
+    </div>
+<br><br><br>
 
 
   </div>
