allergiefilter und -seite

--- a/Kategorien/Ernährung_&_Allergien.html
+++ b/Kategorien/Ernährung_&_Allergien.html
@@ -80,25 +80,25 @@
                  
                 <div class="row">
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\Rezepte\gerichtsart.jpg"><figcaption>Pescetarisch</figcaption></a>
+                            <a href="../Resultat.php?category=allergie&value=IsPescetarian"><img src="../img\Rezepte\gerichtsart.jpg"><figcaption>Pescetarisch</figcaption></a>
                         </div>
                     <div class="column">
-                        <a href="../temp2.html"><img src="../img\Rezepte\zutat.jpg"><figcaption>Vegetarisch</figcaption></a>
+                        <a href="../Resultat.php?category=allergie&value=IsVegetarian"><img src="../img\Rezepte\zutat.jpg"><figcaption>Vegetarisch</figcaption></a>
                     </div>
                 <div class="column">
-                        <a href="../temp2.html"><img src="../img\Rezepte\welt.jpg"><figcaption>Vegan</figcaption></a>
+                        <a href="../Resultat.php?category=allergie&value=IsVegan"><img src="../img\Rezepte\welt.jpg"><figcaption>Vegan</figcaption></a>
                     </div>
                 </div>
 
             <div class="row">
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\Rezepte\festessen.jpg"><figcaption>Ohne Nüsse</figcaption></a>
+                            <a href="../Resultat.php?category=allergie&value=IsNut"><img src="../img\Rezepte\festessen.jpg"><figcaption>Ohne Nüsse</figcaption></a>
                         </div>
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\Rezepte\allergien.jpg"><figcaption>Ohne Gluten</figcaption></a>
+                            <a href="../Resultat.php?category=allergie&value=IsGluten"><img src="../img\Rezepte\allergien.jpg"><figcaption>Ohne Gluten</figcaption></a>
                         </div>
                     <div class="column" >
-                        <a href="../temp2.html"><img src="../img\Rezepte\dessert.jpg"><figcaption>Ohne Lactose</figcaption></a>
+                        <a href="../Resultat.php?category=allergie&value=IsLactose"><img src="../img\Rezepte\dessert.jpg"><figcaption>Ohne Lactose</figcaption></a>
                     </div>
                 
             </div>   
